samples/_failures_safe/1761593743_5a33a5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0d5e1669.c: In function ‘main’:
./samples/SAFE/__tmp_0d5e1669.c:154:37: error: expected ‘)’ at end of input
  154 |     if (!parse_text(&analyzer, input
      |                    ~                ^
      |                                     )
./samples/SAFE/__tmp_0d5e1669.c:154:5: error: expected declaration or statement at end of input
  154 |     if (!parse_text(&analyzer, input
      |     ^~
